--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -44,6 +44,7 @@
       [rowData]="purchaseList()"
       [gridOptions]="gridOptions"
       [columnDefs]="colDefs"
+      [defaultColDef]="defaultColDef"
       [theme]="'legacy'"
       class="ag-theme-alpine"
     />
