--- a/src/app/pages/add-user/add-user.component.html
+++ b/src/app/pages/add-user/add-user.component.html
@@ -1,19 +1,10 @@
 <div class="h-full flex flex-col justify-center items-center">
   <div class="text-4xl font-semibold text-[#014367] mb-16">Create User</div>
 
-  <form
-    [formGroup]="form"
-    class="min-w-96 flex flex-col gap-4"
-    (ngSubmit)="onAddUser()"
-  >
+  <form [formGroup]="form" class="min-w-96 flex flex-col gap-4" (ngSubmit)="onAddUser()">
     <mat-form-field class="w-full">
       <mat-label>User Name</mat-label>
-      <input
-        matInput
-        placeholder="User name"
-        formControlName="username"
-        required
-      />
+      <input matInput placeholder="User name" formControlName="username" required />
       <mat-error *ngIf="form.controls['username'].hasError('required')">
         Name is required
       </mat-error>
@@ -21,21 +12,12 @@
 
     <mat-form-field class="w-full">
       <mat-label>Password</mat-label>
-      <input
-        matInput
-        placeholder="Enter password"
-        [type]="hidePassword() ? 'password' : 'text'"
-        formControlName="password"
-      />
-      <button
-        mat-icon-button
-        matSuffix
-        (click)="togglePasswordVisibility('password')"
-        type="button"
-      >
+      <input matInput placeholder="Enter password" [type]="hidePassword() ? 'password' : 'text'"
+        formControlName="password" />
+      <button mat-icon-button matSuffix (click)="togglePasswordVisibility('password')" type="button">
         <mat-icon>{{
           hidePassword() ? 'visibility_off' : 'visibility'
-        }}</mat-icon>
+          }}</mat-icon>
       </button>
       <mat-error *ngIf="form.controls['password'].hasError('required')">
         Password is required
@@ -47,48 +29,31 @@
 
     <mat-form-field class="w-full">
       <mat-label>Confirm Password</mat-label>
-      <input
-        matInput
-        placeholder="Confirm Password"
-        [type]="hideConfirmPassword() ? 'password' : 'text'"
-        formControlName="confirmPassword"
-      />
-      <button
-        mat-icon-button
-        matSuffix
-        (click)="togglePasswordVisibility('confirmPassword')"
-        type="button"
-      >
+      <input matInput placeholder="Confirm Password" [type]="hideConfirmPassword() ? 'password' : 'text'"
+        formControlName="confirmPassword" />
+      <button mat-icon-button matSuffix (click)="togglePasswordVisibility('confirmPassword')" type="button">
         <mat-icon>{{
           hideConfirmPassword() ? 'visibility_off' : 'visibility'
-        }}</mat-icon>
+          }}</mat-icon>
       </button>
-      <mat-icon
-        *ngIf="
+      <mat-icon *ngIf="
           form.get('confirmPassword')?.value &&
           !form.hasError('passwordsMismatch') &&
           form.controls['confirmPassword'].touched
-        "
-        class="text-green-600"
-        matSuffix
-      >
+        " class="text-green-600" matSuffix>
         check_circle
       </mat-icon>
-      <mat-error
-        *ngIf="
+      <mat-error *ngIf="
           form.controls['confirmPassword'].hasError('required') &&
           form.controls['confirmPassword'].touched
-        "
-      >
+        ">
         Confirm your password
       </mat-error>
-      <mat-error
-        *ngIf="
+      <mat-error *ngIf="
           !form.controls['confirmPassword'].hasError('required') &&
           form.hasError('passwordsMismatch') &&
           form.controls['confirmPassword'].touched
-        "
-      >
+        ">
         Passwords do not match
       </mat-error>
     </mat-form-field>
@@ -105,15 +70,14 @@
         Role is required
       </mat-error>
     </mat-form-field>
+    <mat-dialog-actions align="end" class="w-full mt-4">
+      <button mat-stroked-button mat-dialog-close>
+        Cancel
+      </button>
 
-    <button
-      mat-flat-button
-      color="primary"
-      class="w-full"
-      type="submit"
-      [disabled]="form.invalid"
-    >
-      Create User
-    </button>
+      <button mat-flat-button color="primary" type="submit" [disabled]="form.invalid">
+        Create User
+      </button>
+    </mat-dialog-actions>
   </form>
 </div>
