--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -127,7 +127,7 @@
       <div
         class="w-10 h-10 bg-[#1F4C73] text-white rounded-full flex items-center justify-center font-bold shadow-md"
       >
-        CP
+        {{ getInitials(userName) }}
       </div>
     </header>
 
